--- a/style.css
+++ b/style.css
@@ -117,9 +117,9 @@ fieldset {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap 10px;
+    gap: 10px;
 }
 
 button {
-    background-color: var(--fc-body-sc:);
+    background-color: var(--fc-body-sc);
 }
