--- a/style.css
+++ b/style.css
@@ -58,14 +58,11 @@ h6 {
 
     --bs-h2-font-size: 2.5rem;
     --bs-p-font-size: 1.5rem;
+    --bs-button-size: 2rem;
     --bs-p-interline: 1rem;
 
     --bs-body-font-weight: 400;
     --bs-body-line-height: 1.5;
-}
-
-* {
-    box-sizing: border-box;
 }
 
 body {
@@ -78,11 +75,12 @@ body {
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 80%;
+    justify-content: flex-start;
+    padding: 1rem;
+    height: fit-content
     max-width: 90%;
     background-color: var(--bg-body-sc);
-    margin: 5rem;
+    padding: 2rem;
     border-radius: 1rem;
 }
 
@@ -111,22 +109,59 @@ p {
 }
 
 form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
 }
 
 fieldset {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 10px;
+    justify-content: space-between;
+    width:100%;
+    margin-bottom: 2rem;
+    border: none;
 }
 
-button {
+input[type="radio"] {
+    appearance: none;
+    background-color: var(--bg-body-tr);
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    + label {
+        position: relative;
+        left: -10.6%;
+        top: 1.1rem;
+        font-size: var(--bs-p-font-size);
+    }
+}
+
+input[type="radio"]:checked {
+    background-color: white;
+    + label {
+        color: var(--bg-body-sc);
+    }
+}
+
+input[type="radio"]:hover {
     background-color: var(--fc-body-sc);
+    + label {
+        color: var(--bg-body-sc);
+    }
+}
+input.button {
+    background-color: var(--fc-body-sc);
+    font-size: var(--bs-button-size);
+    width: 95%;
+    height: 5.5rem;
+    border-radius: 32px;
 }
 
 .selection {
     align-items: center;
-    border-radius: 25%;
+    border-radius: 2rem;
 }
 
 .thanks {
