--- a/style.css
+++ b/style.css
@@ -60,9 +60,7 @@ h6 {
     --bs-p-font-size: 1.5rem;
     --bs-button-size: 2rem;
     --bs-p-interline: 1rem;
-
-    --bs-body-font-weight: 400;
-    --bs-body-line-height: 1.5;
+    --bs-p-interline2: 1.5rem;
 }
 
 body {
@@ -77,7 +75,7 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    height: fit-content
+    height: fit-content;
     max-width: 90%;
     background-color: var(--bg-body-sc);
     padding: 2rem;
@@ -119,7 +117,7 @@ fieldset {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width:100%;
+    width: 100%;
     margin-bottom: 2rem;
     border: none;
 }
@@ -160,10 +158,26 @@ input.button {
 }
 
 .selection {
-    align-items: center;
+    align-self: center;
+    margin-bottom: var(--bs-p-interline2);
+    p {
+        text-align: center;
+        margin-bottom: var(--bs-p-interline2);
+    }
+}
+.selectionChoice {
     border-radius: 2rem;
+    align-content: center;
+    align-self: center;
+    width: 16rem;
+    height: 3rem;
+    text-align: center;
+    color: var(--fc-body-sc);
+    background-color: var(--bg-body-tr);
 }
 
-.thanks {
-    width: 15rem;
+.img-thanks {
+    align-self: center;
+    width: 19rem;
+    margin-bottom: var(--bs-p-interline2);
 }
