--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ fieldset {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    max-width: 550px;
     width: 100%;
     margin-bottom: 2rem;
     border: none;
@@ -130,14 +131,14 @@ input[type="radio"] {
     height: 4rem;
     + label {
         position: relative;
-        left: -10.6%;
+        left: -10%;
         top: 1.1rem;
         font-size: var(--bs-p-font-size);
     }
 }
 
 input[type="radio"]:checked {
-    background-color: white;
+    background-color: var(--fc-body-pr);
     + label {
         color: var(--bg-body-sc);
     }
